--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,41 @@
-<html>
-    <body>
-        HOLA ESTATICO!
-    </body>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>SOS2425-20</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 40px;
+      line-height: 1.6;
+      background-color: #f9f9f9;
+      color: #333;
+    }
+    h1 {
+      color: #007BFF;
+    }
+    h2 {
+      font-weight: normal;
+      margin-top: -10px;
+    }
+    a {
+      display: inline-block;
+      margin-top: 20px;
+      padding: 10px 15px;
+      background-color: #007BFF;
+      color: white;
+      text-decoration: none;
+      border-radius: 5px;
+    }
+    a:hover {
+      background-color: #0056b3;
+    }
+  </style>
+</head>
+<body>
+  <h1>SOS2425-20</h1>
+  <h2>Proyecto de la asignatura Sistemas Orientados a Servicios</h2> 
+  <a href="https://sos2425-20.onrender.com/about">Información del proyecto</a>
+</body>
 </html>
